# botfront-external-trainer

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  run-dev.sh
.github/workflows/: create-tag.yml
app/: app.py  job_manager.py
app/templates/: cm.yml  job.yml  train.py
